--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "cartopy (>=0.25.0,<0.26.0)",
     "rasterio (>=1.4.3,<2.0.0)",
     "rioxarray (>=0.19.0,<0.20.0)",
+    "imageio[ffmpeg] (>=2.37.0,<3.0.0)",
 ]
 
 
